testsuite/tests/overloadedrecflds/should_fail/NFSSuppressed.stderr

NFSSuppressed.hs:9:5: error:
    Variable not in scope: foo
    Suggested fixes:
      • Perhaps use data constructor ‘Foo’ (line 7)
      • Notice that ‘foo’ is a field selector belonging to the type ‘Foo’
        that has been suppressed by NoFieldSelectors.
